# drf-auth

./: pyproject.toml
blog/: README.md  db.sqlite3  pyproject.toml  requirements.txt
blog/blog/: settings.py  urls.py
blog/posts/: admin.py
